--- a/templates/admin/settings.html
+++ b/templates/admin/settings.html
@@ -42,7 +42,7 @@
                                 {{ form.status.label }}
                             </div>
                             <div class="form-floating mb-3">
-                                {{ form.availability(class="form-control", value="%s" | format(settings.availability)) }}
+                                {{ form.availability(class="form-control form-select", value="%s" | format(settings.availability)) }}
                                 {{ form.availability.label }}
                             </div>
                             <div class="form-floating mb-3">
