--- a/templates/admin/add_project.html
+++ b/templates/admin/add_project.html
@@ -48,6 +48,10 @@
                         {{ form.description(class="form-control", placeholder="Description") }}
                         {{ form.description.label }}
                     </div>
+                    <div class="form-check form-switch mb-3">
+                        {{ form.featured(class="form-check-input", placeholder="Featured") }}
+                        {{ form.featured.label(class="form-check-label") }}
+                    </div>
                     {{ form.url_for_sign_s3(value="%s" | format(url_for('sign_s3'))) }}
                     {{ form.url_for_delete_s3(value="%s" | format(url_for('delete_s3'))) }}
                     {{ form.collection(value="projects") }}
