chore(cv): limit projects in CV to 5 and style to display year and tech badges, limit project photos
Add year and featured badge to project page

--- a/templates/admin/projects.html
+++ b/templates/admin/projects.html
@@ -46,8 +46,8 @@
                                         <small><span class="badge rounded-pill bg-warning text-dark">Featured</span></small>
                                     {% endif %}
                                     </h3>
+                                    <span class="badge bg-dark">{{ project.year }}</span><br>
                                     <span class="fst-italic">Slug: {{ project.slug }}</span><br>
-                                    <span class="fst-italic">Year: {{ project.year }}</span><br>
                                     {% if project.repo %}
                                         <small class="text-muted">Repo: {{ project.repo }}</small><br>
                                     {% endif %}
