--- a/templates/cv.html
+++ b/templates/cv.html
@@ -88,6 +88,30 @@
             line-height: 3rem;
         }
 
+        /*------------------------------------------ PORTFOLIO */
+
+        .year {
+            padding: 0.3rem;
+            margin-right: 0.3rem;
+            border-radius:0.3rem;
+            color: #fff;
+            background-color: #333;
+        }
+
+        .techs {
+            padding: 0;
+        }
+
+        .techs li {
+            display:inline;
+            padding: 0.3rem;
+            margin-right: 0.3rem;
+            border-radius:0.3rem;
+            color: #000;
+            background-color: #ddd;
+            line-height: 1.5rem;
+        }
+
         /*------------------------------------------ IMAGES */
         .profile-container {
             display: inline-block;
@@ -176,7 +200,13 @@
     {% for project in projects %}
         <div class="item">
             <h3>{{ project.title }}</h3>
-            <h4 class="fw-normal no-margin">{{ project.tech }}</h4>
+            <span class="year">{{ project.year }}</span>
+            <ul class="techs">
+            {% set technologies = project.tech.split(',') %}
+            {% for tech in technologies %}
+                <li>{{ tech }}</li>
+            {% endfor %}
+            </ul>
             {% if project.live_url %}
                 <h4 class="fw-normal no-margin"><strong>Demo:</strong> <span class="text-light">{{ project.live_url }}</span></h4>
             {% endif %}
@@ -185,12 +215,13 @@
             {% endif %}
             <p>{{ project.description }}</p>
             {% if project.photos|length %}
-                {% for photo in project.photos %}
+                {% for photo in project.photos[:5] %}
                     <img src="{{ photo }}" alt="Photo {{ loop.index }}" class="gallery">
                 {% endfor %}
             {% endif %}
         </div>
     {% endfor %}
+    <p>These are 5 of my featured projects. For a complete projects list, please visit my Portfolio at  <a href="{{ root }}"> {{ root }}</a></p>
     <!-- TESTIMONIALS -->
     <div class="text-center"><span class="icon"><i class="fas fa-quote-right"></i></span></div>
     <hr class="separator">
