--- a/templates/admin/blogs.html
+++ b/templates/admin/blogs.html
@@ -29,7 +29,7 @@
                                 <div class="col-6 offset-3 col-sm-2 offset-sm-0 text-center">
                                     {% if blog.photos|length %}
                                         <img src="{{ blog.photos[0] }}" alt="{{ blog.title }}"
-                                            class="img-fluid">
+                                            class="img-fluid" loading="lazy">
                                     {% else %}
                                         <i class="bi bi-blockquote-left fs-1"></i>
                                     {% endif %}
