--- a/templates/project.html
+++ b/templates/project.html
@@ -44,7 +44,7 @@
                 <div class="row">
                     <div class="col-12 col-md-6">
                         <figure>
-                            {% if project.photos|length %}
+                            {% if project.photos|length and project.photos[0]|length %}
                                 <a href="{{ project.photos[0] }}"
                                     class="project-gallery">
                                     <img src="{{ project.photos[0] }}"
