--- a/templates/admin/projects.html
+++ b/templates/admin/projects.html
@@ -55,7 +55,7 @@
                                         <small class="text-muted">URL: {{ project.live_url }}</small><br>
                                     {% endif %}
                                     <small class="text-muted">Tech: {{ project.tech }}</small>
-                                    <p class="pt-2 fw-light">{{ project.description|truncate(250) }}</p>
+                                    <p class="pt-2 fw-light">{{ project.brief }}</p>
                                 </div>
                             </div>
                             <div class="controls d-flex flex-column align-items-center justify-content-around ms-4">
