--- a/templates/project.html
+++ b/templates/project.html
@@ -91,7 +91,7 @@
                 <div class="row">
                     <div class="col-12 project-description">
                         <h4>Description</h4>
-                        <p>{{ project.description }}</p>
+                        <p>{{ project.description|safe }}</p>
                     </div>
                 </div>
                 {% if project.photos|length <= 1 %}
