--- a/templates/admin/add_project.html
+++ b/templates/admin/add_project.html
@@ -45,6 +45,10 @@
                         {{ form.live_url.label }}
                     </div>
                     <div class="form-floating mb-3">
+                        {{ form.brief(class="form-control", placeholder="Brief", maxlength="100") }}
+                        {{ form.brief.label }}
+                    </div>
+                    <div class="form-floating mb-3">
                         {{ form.description(class="form-control", placeholder="Description") }}
                         {{ form.description.label }}
                     </div>
@@ -79,4 +83,7 @@
     </script>
     <script src="{{ url_for('static', filename='js/slugify.js') }}"></script>
     <script src="{{ url_for('static', filename='js/photos.js') }}"></script>
+    <script src="https://cdn.tiny.cloud/1/emgmzxkejmtysjj6vbbmqrkk2zkr2qoo44j51u7oam308dtn/tinymce/5/tinymce.min.js"
+        referrerpolicy="origin"></script>
+    <script src="{{ url_for('static', filename='js/tiny.js') }}"></script>
 {% endblock scripts %}
