--- a/templates/blog-post.html
+++ b/templates/blog-post.html
@@ -76,13 +76,12 @@
                 </div>
             </div>
         </div>
-        </div>
     </section>
 {% endblock content %}
 {% block scripts %}
     <script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
     <!-- CREDIT: https://github.com/biati-digital/glightbox -->
-    <script type="text/javascript">
+    <script>
         const lightbox = GLightbox({ 'selector': '.blog-gallery' });
     </script>
 {% endblock scripts %}
