--- a/templates/landing.html
+++ b/templates/landing.html
@@ -91,7 +91,7 @@
                         <div class="skill-container">
                             <span class="skill-label">{{ skill.name }}</span>
                             <div class="progress">
-                                <div class="progress-bar bg-accent" role="progressbar" aria-progressbar-name="{{ skill.name }}" style="width: {{ skill.percentage }}%"
+                                <div class="progress-bar bg-accent" role="progressbar" aria-label="{{ skill.name }}" style="width: {{ skill.percentage }}%"
                                     aria-valuenow="{{ skill.percentage }}" aria-valuemin="0" aria-valuemax="100"></div>
                             </div>
                         </div>
@@ -259,7 +259,7 @@
 {% block scripts %}
     <script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
     <!-- CREDIT: https://github.com/biati-digital/glightbox -->
-    <script type="text/javascript">
+    <script>
         const lightbox = GLightbox({ 'selector': '.gallery' });
     </script>
 {% endblock scripts %}
