--- a/templates/admin/testimonials.html
+++ b/templates/admin/testimonials.html
@@ -15,7 +15,7 @@
                 <form action="{{ url_for('get_testimonials') }}" method="POST">
                     {{ form.csrf_token }}
                     <div class="card-header text-center">
-                        {{ form.submit(class="btn btn-lg btn-accent") }}
+                        {{ form.submit(class="btn btn-lg btn-accent", id="submit-top") }}
                     </div>
                     <div class="card-header">
                         Unapproved
