--- a/templates/admin/add_project.html
+++ b/templates/admin/add_project.html
@@ -53,7 +53,7 @@
                     {{ form.description.label }}
                 </div>
                 <div class="form-check form-switch mb-3">
-                    {{ form.featured(class="form-check-input", placeholder="Featured") }}
+                    {{ form.featured(class="form-check-input") }}
                     {{ form.featured.label(class="form-check-label") }}
                 </div>
                 {{ form.url_for_sign_s3(value="%s" | format(url_for('sign_s3'))) }}
