--- a/templates/admin/links.html
+++ b/templates/admin/links.html
@@ -20,7 +20,7 @@
                 <form action="{{ url_for('get_links') }}" method="POST">
                     {{ form.csrf_token }}
                     <div class="card-header text-center">
-                        {{ form.submit(class="btn btn-lg btn-accent") }}
+                        {{ form.submit(class="btn btn-lg btn-accent", id="submit-top") }}
                     </div>
                     <ul class="list-group list-group-flush">
                         {% for link in links %}
