--- a/templates/project.html
+++ b/templates/project.html
@@ -112,6 +112,7 @@
     </div>
 </section>
 {% if project and project.photos|length > 1 %}
+<!-- Project Gallery SECTION -->
 <section id="project-gallery">
     <!-- CREDIT: https://codepen.io/xyzzyestudioweb/pen/JgdKOR -->
     <svg class="separator" xmlns="http://www.w3.org/2000/svg" width="100%" height="100" viewBox="0.4 0.2 200 44"
