--- a/templates/admin/edit_project.html
+++ b/templates/admin/edit_project.html
@@ -77,8 +77,9 @@
                     <div id="gallery" class="row">
                         {% for photo in project.photos %}
                         <div class="photo-container col-sm-4 col-md-6 col-lg-4" data-src="{{ photo }}">
-                            <a href="{{ photo }}" class="projects-gallery">
-                                <img class="img-thumbnail gallery-item" src="{{ photo }}" alt="Photo {{ loop.index }}">
+                            <a href="{{ photo.url }}" class="projects-gallery">
+                                <img class="img-thumbnail gallery-item" src="{{ photo.url }}"
+                                    alt="Photo {{ loop.index }}">
                             </a>
                             <a class="delete-photo btn btn-danger" data-photo-key="{{ loop.index0 }}">
                                 <i class="bi bi-trash-fill"></i>
