--- a/templates/contact.html
+++ b/templates/contact.html
@@ -7,7 +7,7 @@
     <style>
         .hero-img {
             {% if settings.photos|length %}
-                background: url('{{ settings.photos[0] }}');
+                background: url('{{ settings.photos[0].url }}');
             {% else %}
                 background: url('{{ url_for('static', filename='images/no-photo.jpg') }}');
             {% endif %}
