--- a/templates/landing.html
+++ b/templates/landing.html
@@ -5,7 +5,7 @@
     <style>
         .hero-img {
             {% if settings.photos|length %}
-                background: url('{{ settings.photos[0] }}');
+                background: url('{{ settings.photos[0].url }}');
             {% else %}
                 background: url('{{ url_for('static', filename='images/no-photo.jpg') }}');
             {% endif %}
@@ -21,7 +21,7 @@
             <div class="row align-items-center justify-content-center g-5 py-5 hero">
                 <div class="col-8 col-sm-6 col-md-5 col-lg-4">
                     {% if settings.photos|length %}
-                        <a href="{{ settings.photos[0] }}"
+                        <a href="{{ settings.photos[0].url }}"
                                 class="hero-img gallery">
                         </a>
                     {% else %}
