--- a/templates/project.html
+++ b/templates/project.html
@@ -47,8 +47,8 @@
             <div class="col-12 col-md-6">
                 <figure>
                     {% if project.photos|length and project.photos[0]|length %}
-                    <a href="{{ project.photos[0] }}" class="project-gallery">
-                        <img src="{{ project.photos[0] }}" alt="{{ project.title }}"
+                    <a href="{{ project.photos[0].url }}" class="project-gallery">
+                        <img src="{{ project.photos[0].url }}" alt="{{ project.title }}"
                             class="project-main-photo gallery-item" loading="lazy">
                     </a>
                     {% else %}
@@ -131,8 +131,8 @@
             {% if loop.index0 > 0 %}
             <div class="col">
                 <figure>
-                    <a href="{{ photo }}" class="project-gallery"><img src="{{ photo }}" alt="Photo {{ loop.index }}"
-                            class="gallery-item"></a>
+                    <a href="{{ photo.url }}" class="project-gallery"><img src="{{ photo.url }}"
+                            alt="Photo {{ loop.index }}" class="gallery-item"></a>
                 </figure>
             </div>
             {% endif %}
