refactor(storage): Implement photo delete from cloud and database using cloudinary and new structure

--- a/templates/admin/base.html
+++ b/templates/admin/base.html
@@ -37,6 +37,7 @@
         const urlForUploadPhoto = "{{ url_for('upload_photo') }}";
         const urlForSavePhoto = "{{ url_for('save_photo') }}";
         const urlForDeletePhoto = "{{ url_for('delete_photo') }}";
+        const urlForDeleteCloud = "{{ url_for('delete_from_cloud') }}";
     </script>
 </head>
 
