--- a/templates/admin/settings.html
+++ b/templates/admin/settings.html
@@ -86,7 +86,8 @@
                     <div class="mb-2">Current Photo</div>
                     <div id="gallery" class="row">
                         {% if settings.photos|length %}
-                        <div class="photo-container col-sm-4 col-md-6 col-lg-4" data-src="{{ settings.photos[0].url }}">
+                        <div class="photo-container col-sm-4 col-md-6 col-lg-4" data-src="{{ settings.photos[0].url }}"
+                            data-fileid="{{ settings.photos[0].public_id }}">
                             <a href="{{ settings.photos[0].url }}" class="settings-gallery">
                                 <img class="img-thumbnail gallery-item" src="{{ settings.photos[0].url }}"
                                     alt="Profile Photo">
