--- a/templates/admin/edit_blog.html
+++ b/templates/admin/edit_blog.html
@@ -51,7 +51,8 @@
                     <div class="mb-2">Current Photos</div>
                     <div id="gallery" class="row">
                         {% for photo in post.photos %}
-                        <div class="photo-container col-sm-4 col-md-6 col-lg-4" data-src="{{ photo }}">
+                        <div class="photo-container col-sm-4 col-md-6 col-lg-4" data-src="{{ photo.url }}"
+                            data-fileid="{{ photo.public_id }}">
                             <a href="{{ photo.url }}" class="blogs-gallery">
                                 <img class="img-thumbnail gallery-item" src="{{ photo.url }}"
                                     alt="Photo {{ loop.index }}">
