--- a/templates/admin/edit_project.html
+++ b/templates/admin/edit_project.html
@@ -76,7 +76,8 @@
                     <div class="mb-2">Current Photos</div>
                     <div id="gallery" class="row">
                         {% for photo in project.photos %}
-                        <div class="photo-container col-sm-4 col-md-6 col-lg-4" data-src="{{ photo }}">
+                        <div class="photo-container col-sm-4 col-md-6 col-lg-4" data-src="{{ photo.url }}"
+                            data-fileid="{{ photo.public_id }}">
                             <a href="{{ photo.url }}" class="projects-gallery">
                                 <img class="img-thumbnail gallery-item" src="{{ photo.url }}"
                                     alt="Photo {{ loop.index }}">
